[gd_scene load_steps=9 format=3 uid="uid://dpwtpikwhfl2f"]

[ext_resource type="Script" uid="uid://bqkvq7otwihom" path="res://game/characters/npcs/faction_npc.gd" id="1_h35rw"]
[ext_resource type="Script" uid="uid://cpjigvttt30kj" path="res://game/characters/npcs/faction_npc_ai.gd" id="2_vdddp"]
[ext_resource type="Script" uid="uid://csf204hleefyv" path="res://game/characters/npcs/faction_npc_combat.gd" id="3_st7o1"]
[ext_resource type="Script" uid="uid://0qyj1oasme43" path="res://game/characters/npcs/faction_npc_stats.gd" id="4_otmjk"]
[ext_resource type="Script" uid="uid://c2x18xg7h0m7c" path="res://game/characters/shared/resource_component.gd" id="5_w36hx"]
[ext_resource type="Script" uid="uid://bq7hc15k4c0ku" path="res://core/combat/danger_meter_component.gd" id="6_lgduo"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k85i5"]
size = Vector2(24, 24)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ex06h"]
size = Vector2(32, 32)

[node name="FactionNPC" type="CharacterBody2D" groups=["mobs"]]
motion_mode = 1
script = ExtResource("1_h35rw")

[node name="TargetMarker" type="ColorRect" parent="."]
offset_left = -22.0
offset_top = 13.0
offset_right = 22.0
offset_bottom = 19.0
color = Color(1, 0, 0, 0.5411765)

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 16.0
color = Color(0.3882353, 0.18039216, 0.9764706, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_k85i5")

[node name="UI" type="Node2D" parent="."]

[node name="HpBack" type="ColorRect" parent="UI"]
offset_left = -18.0
offset_top = -30.0
offset_right = 18.0
offset_bottom = -24.0
color = Color(0, 0, 0, 0.88235295)

[node name="HpFill" type="ColorRect" parent="UI"]
offset_left = -18.0
offset_top = -30.0
offset_right = 18.0
offset_bottom = -24.0
color = Color(0.38720772, 0.18201989, 0.97702104, 1)

[node name="TargetHitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TargetHitbox"]
shape = SubResource("RectangleShape2D_ex06h")

[node name="Components" type="Node" parent="."]

[node name="AI" type="Node" parent="Components"]
script = ExtResource("2_vdddp")

[node name="Combat" type="Node" parent="Components"]
script = ExtResource("3_st7o1")

[node name="Stats" type="Node" parent="Components"]
script = ExtResource("4_otmjk")

[node name="Resource" type="Node" parent="Components"]
script = ExtResource("5_w36hx")

[node name="Danger" type="Node" parent="Components"]
script = ExtResource("6_lgduo")
